--- a/Shop/brand-collections-page/app/index.html
+++ b/Shop/brand-collections-page/app/index.html
@@ -1254,8 +1254,8 @@
                                      <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>     
                                 </div>
                                 <div class="links_section">
-                                    <a class="more" href="#"><span>Подробнее</span></a>
-                                    <a href="#"><span>Вce о бренде</span></a>
+                                    <a class="more" href="#"><span>Развернуть</span></a>
+                                    <a class="link_outer" href="#"><span>Вce о бренде</span></a>
                                 </div>
                             </div>
                         </div>
@@ -1269,8 +1269,14 @@
                     <div class="container">
                         <div class="brand_categories_content">
                             <div class="categories_nav">
+                            <span class="mobile_current_slide">Все</span>
                             <ul class="categories_list">
-                                <li class="active_nav_link"><a href="#" data-slide="1"><span>Все</span></a></li>
+                                <li><a href="#" data-slide="1"><span>Все</span></a></li>
+                                <li><a href="#" data-slide="2"><span>Люки сантехнические</span></a></li>
+                                <li><a href="#" data-slide="3"><span>Сифоны</span></a></li>
+                                <li><a href="#" data-slide="4"><span>Тумбы</span></a></li>
+                                <li><a href="#" data-slide="5"><span>Светильники</span></a></li>
+                                <li><a href="#" data-slide="1"><span>Все</span></a></li>
                                 <li><a href="#" data-slide="2"><span>Люки сантехнические</span></a></li>
                                 <li><a href="#" data-slide="3"><span>Сифоны</span></a></li>
                                 <li><a href="#" data-slide="4"><span>Тумбы</span></a></li>
