--- a/Shop/brand-collections-page/app/index.html
+++ b/Shop/brand-collections-page/app/index.html
@@ -1325,6 +1325,124 @@
                                             </span>
                                         </div>
                                     </div>
+                                    
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
+                                        <div class="slider-item">
+                                            <a class="img" href="#">
+                                                <img src="images/content/slider-item1.jpg" alt="">
+                                                <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            </a>
+                                            <span class="slider-item-more">
+                                                <a class="item-link" href="#">
+                                                    <p>Чугунная ванна Aqualux Delafon Cleo / Revival Чугунная ванна Aqualux Delafon Cleo / Revival</p>
+                                                </a>
+                                            </span>
+                                        </div>
+                                    </div>
                                     <div class="slider-item-container col-lg-2 col-md-3 col-sm-4">
                                         <div class="slider-item">
                                             <a class="img" href="#">
