--- a/Shop/brand-page/app/index.html
+++ b/Shop/brand-page/app/index.html
@@ -1206,7 +1206,7 @@
                                      <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>     
                                 </div>
             	 	   	   	    <div class="links_section">
-                                    <a class="more" href="#"><span>Подробнее</span></a>
+                                    <a class="more" href="#"><span>Развернуть</span></a>
             	 	   	   	    	<div class="links">
                                         <a class="video" href="#"><span class="video_ico">Видео о бренде</span>(35)</a>
                                         <a class="rev" href="#"><span class="rev_ico">Отзывы</span>(35)</a>        
