--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -15,7 +15,6 @@
         <div class="header" style="height: 132px;position: relative;width: 100%; z-index: 2">
             <span style="display: block;background: url(img_compressed/header.png) no-repeat top center;position: absolute;width: 100%;height: 197px;top: 0;left: 50%;transform: translateX(-50%);"></span>
         </div>
-
         <div id="land_wrapper">
             <div class="top_section_heading">
                 <div class="land_container">
@@ -26,11 +25,13 @@
                         <p class="txt_item_3"><span>10%</span> скидку</p>
                         <p class="txt_item_4">на подвесной унитаз</p>
                     </div>
+                    <span class="discount_label"></span>
                 </div>
-                <span class="discount_label"></span>
-                <span class="scroll_icon"></span>
+                <span class="scroll_icon">
+                	 <a href="#how_it_works" class="scroll"></a>
+                </span>
             </div>
-            <div class="how_it_works">
+            <div id="how_it_works">
                 <div class="land_container">
                     <span class="how_title">Как это работает:</span>
                     <div class="how_content">
@@ -45,78 +46,89 @@
                 </div>
             </div>
             <div class="last_screen_block">
-            	  <div class="land_container">
-            	  	  <div class="title_container">
-            	  	  	 <span class="last_title">варианты комплектов</span>
-            	  	  </div>
-            	  	  <div class="block_container">
-            	  	  	  <a href="#" class="item">
+                <div class="land_container">
+                    <div class="title_container">
+                        <span class="last_title">варианты комплектов</span>
+                    </div>
+                    <div class="block_container">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item1.jpg" alt="Система инсталляции для унитазов Geberit Duofix Delta 3 в 1 с кнопкой смыва">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Geberit Duofix Delta 3 в 1 с кнопкой смыва</span>
             	  	  	  	  	 <span class="item_price">8 350<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item2.jpg" alt="Система инсталляции для унитазов Geberit Duofix Delta 3 в 1 с кнопкой смыва">
             	  	  	  	  <div class="item_description">
-            	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Geberit Duofix Delta 3 в 1 с кнопкой смыва</span>
+            	  	  	  	  	 <span class="item_title">Унитаз подвесной Cersanit Carina new clean on slim lift MZ-CARINA-COn-S-DL</span>
             	  	  	  	  	 <span class="item_price">5 085<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item3.jpg" alt="Система инсталляции для унитазов Geberit Duofix UP320 111300005">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Geberit Duofix UP320 111300005</span>
             	  	  	  	  	 <span class="item_price">12 000<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item4.jpg" alt="Система инсталляции для унитазов Geberit Duofix UP320 111300005">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Geberit Duofix UP320 111300005</span>
             	  	  	  	  	 <span class="item_price">9 861<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item5.jpg" alt="Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в 1 с кнопкой смыва">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Grohe Rapid SL 38772001 3 в 1 с кнопкой смыва</span>
             	  	  	  	  	 <span class="item_price">13 280<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item6.jpg" alt="Подвесной унитаз CeramaLux TR2196">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Подвесной унитаз CeramaLux TR2196</span>
             	  	  	  	  	 <span class="item_price">10 800<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item7.jpg" alt="Система инсталляции для унитазов Roca DUPLO WC 89009000K">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Roca DUPLO WC 89009000K</span>
             	  	  	  	  	 <span class="item_price">15 946<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a href="#" class="item">
+                        <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item8.jpg" alt="Унитаз подвесной Roca Gap 34647L000 Clean Rim">
             	  	  	  	  <div class="item_description">
             	  	  	  	  	 <span class="item_title">Унитаз подвесной Roca Gap 34647L000 Clean Rim</span>
             	  	  	  	  	 <span class="item_price">16 657<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
-            	  	  	  <a class="bottom_link" href="#">выбрать инсталляцию</a>
-            	  	  	  <a class="bottom_link" href="#">выбрать унитаз</a>
-            	  	  </div>
-            	  </div>
+                        <a class="bottom_link" href="#">выбрать инсталляцию</a>
+                        <a class="bottom_link" href="#">выбрать унитаз</a>
+                    </div>
+                </div>
             </div>
         </div>
-
         <!--Загрушка, СТИЛИ ЗДЕСЬ ИНЛАЙН, в css лишнего нет-->
         <div class="footer" style="height: 453px;position: relative;width: 100%; z-index: 2">
             <span style="display: block;background: url(img_compressed/footer.png) no-repeat top center;position: absolute;width: 100%;height: 100%;top: 0;left: 50%;transform: translateX(-50%);"></span>
         </div>
     </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+    </script>
+    <script>
+    $(document).ready(function() {
+        $(".scroll").click(function(event) {
+            event.preventDefault();
+            var id = $(this).attr('href'),
+                top = $(id).offset().top;
+            $('body,html').animate({ scrollTop: top }, 600);
+        });
+    });
+    </script>
 
 </html>
