--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -75,7 +75,7 @@
                         <a href="#" class="item">
             	  	  	  	  <img src="img_compressed/item4.jpg" alt="Система инсталляции для унитазов Geberit Duofix UP320 111300005">
             	  	  	  	  <div class="item_description">
-            	  	  	  	  	 <span class="item_title">Система инсталляции для унитазов Geberit Duofix UP320 111300005</span>
+            	  	  	  	  	 <span class="item_title">Унитаз подвесной Roca Dama Senso 346517000</span>
             	  	  	  	  	 <span class="item_price">9 861<span class="rub">руб.</span></span>
             	  	  	  	  </div>
             	  	  	  </a>
