--- a/portfolio/Crystal/app/index.html
+++ b/portfolio/Crystal/app/index.html
@@ -235,6 +235,87 @@
                             </p>
                             <span class="post_txt">Присоединиться к привлекательным людям с хорошим настроением можно по адресам</span>
                         </div>
+                        <div class="slider_container">
+                            <span class="arrow_left_brands"></span>
+                            <span class="arrow_right_brands"></span>
+                            <div class="slider_brands">
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/naturality.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/topgun.svg" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/assa.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/lebon.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/yamaki.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/global_white.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="brand_slide">
+                                    <div class="img_content">
+                                        <img src="img/partners/naturality.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="post_txt">
+                            <span>Зубные пасты Lebon создаются из этичных, натуральных и органических ингредиентов в сочетании с эксклюзивными чудесными ароматами, которые делают их полезными и вкусными. Ароматические композиции для Lebon создает компания, основанная во Французской Ривьере в 18 веке, являющаяся поставщиком сырья для элитных брендов от кутюр и парфюмерных марок Франции. </span>
+                        </div>
+                    </div>
+                </div>
+                <span class="letter_item"></span>
+                <div class="price">
+                    <div class="container">
+                        <div class="title_section">
+                            <span class="title"><span>crystal</span> price</span>
+                        </div>
+                        <div class="title_desription">
+                            <p><span>Улыбка</span> — основа коммуникации в человеческом сообществе. <br>
+                                <span>Улыбка</span> является наиболее узнаваемым выражением лица. Люди могут распознать <span>улыбку</span> на расстоянии до 100 метров. <br>
+                                CRYSTAL способствует созданию дружелюбной и позитвной атмосферы в обществе.
+                            </p>
+                            <span class="post_txt">Узнать цену искренней улыбки</span>
+                        </div>
+                        <div class="price_container">
+                            <div class="center_price_block">
+                                <div class="price_block_container">
+                                    <img src="img/price_item.svg" alt="price" class="prive">
+                                    <a href="#" class="sign_up">записаться онлайн</a> 
+                                </div>   
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stock">
+                    <div class="container">
+                        <div class="title_section">
+                            <span class="title"><span>crystal</span> life</span>
+                        </div>
+                        <div class="title_desription">
+                            <p><span>Улыбка</span> — основа коммуникации в человеческом сообществе. <br>
+                                <span>Улыбка</span> является наиболее узнаваемым выражением лица. Люди могут распознать <span>улыбку</span> на расстоянии до 100 метров. <br>
+                                CRYSTAL способствует созданию дружелюбной и позитвной атмосферы в обществе.
+                            </p>
+                            <span class="post_txt">Присоединиться к команде, вызывающей искренюю улыбку</span>
+                        </div>
                     </div>
                 </div>
             </div>
