--- a/portfolio/Crystal/app/index.html
+++ b/portfolio/Crystal/app/index.html
@@ -316,6 +316,12 @@
                             </p>
                             <span class="post_txt">Присоединиться к команде, вызывающей искренюю улыбку</span>
                         </div>
+                        <div class="sub_title">
+                            <div class="txt_block">
+                                <span class="top">CRYSTAL</span>
+                                <span class="bottom">акции</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
